@@ -1,3 +1,8 @@
+2009-09-03  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/plot/PiePlot.java
+    (drawSimpleLabels): Make use of simpleLabelOffset attribute.
+
 2009-09-01  David Gilbert  <david.gilbert@object-refinery.com>
 
     Bug 2840132:
